tests/cases/compiler-development/artifact/errors/diagnostic-unknown-trait.diagnostic
diagnostic error code=T0001 family=type source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-unknown-trait.ari" line=1 column=19 byte_start=18 byte_end=30 message="unknown trait bound 'MissingTrait'" snippet="  --> tests/cases/compiler-development/artifact/errors/diagnostic-unknown-trait.ari:1:19\n   |\n 1 | fn use_missing[T: MissingTrait](value: T) -> i64 {\n   |                   ^^^^^^^^^^^^"
